clang/test/BSC/Negative/Ownership/RuleCheck/param-or-var/param-or-var.cbs
// RUN: %clang_cc1 -verify %s

struct A {};

void func1(int * owned a) {} // expected-error {{a's memory will leak at the end of scope}}

void func2(int * owned a) {
	{}
} // expected-error {{a's memory will leak at the end of scope}}

void func3(int owned a) {} // expected-error {{a's memory will leak at the end of scope}}

void func4(struct A owned a) {} // expected-error {{a's memory will leak at the end of scope}}

void func5(struct A * owned a) {} // expected-error {{a's memory will leak at the end of scope}}

void func6(int * owned a) {
	int num = 5;
	a = (int * owned)&num; // expected-error {{cannot assign a because its type is owned}}
} // expected-error {{a's memory will leak at the end of scope}}

void func7() {
	int num = 1;
	int owned a;
	a = (int owned)num;
} // expected-error {{a's memory will leak at the end of scope}}

void func13(int * owned a) {
	int * owned p = a;
	int n = 0;
	a = (int * owned)&n;
} // expected-error {{a's memory will leak at the end of scope}} expected-error {{p's memory will leak at the end of scope}}

void func14(int * owned a, int * owned b) {
	a = b; // expected-error {{cannot assign a because its type is owned}}
} // expected-error {{a's memory will leak at the end of scope}}


struct B {
	int owned a;
	int owned b;
};

void func15(struct B b) {
	int owned a = b.a;
} // expected-error {{b.b's memory will leak at the end of scope}} expected-error {{a's memory will leak at the end of scope}}

struct B func16(struct B b) {
	int owned a = b.b;
	return b; // expected-error {{b cannot be accessed, because it is uninitialized or moved}} expected-error {{a's memory will leak at the end of scope}}
}

int main() {
	return 0;
}